--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="background-hero"><img src="" class="hero" /></div>
+  </body>
 </html>
