--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AstroCine '80</title>
+    <title>Nordic Frost</title>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
     <link href="index.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -14,6 +14,9 @@
     />
   </head>
   <body>
-    <div class="background-hero"><img src="" class="hero" /></div>
+    <div class="background-hero">
+      <img src="images/hero.jpg" class="hero" />
+      <div class="navbar"></div>
+    </div>
   </body>
 </html>
