--- a/index.html
+++ b/index.html
@@ -16,7 +16,29 @@
   <body>
     <div class="background-hero">
       <img src="images/hero.jpg" class="hero" />
-      <div class="navbar"></div>
+      <div class="navbar">
+        <div class="logo-mobile"><img src="svg-files/logo-mobile.svg" /></div>
+        <div class="hamburger"><img src="svg-files/hamburger.svg" /></div>
+      </div>
+      <h1>Nordic Frost Resort</h1>
+      <h2>Experience Arctic Comfort, Nordic Style</h2>
+      <div class="book-mobile">BOOK NOW</div>
+    </div>
+    <div class="about-container">
+      <div class="about-text">
+        <h3>About us</h3>
+        <h4>
+          Nordic Frost resort is an exquisite blend of comfort and wilderness.
+          The location right beside Lake Inari makes the hotel the perfect place
+          to see the Northern Lights. The restaurant&#39;s large windows give a
+          panoramic view over the lake. Just five minutes from Sami village
+          Inari&#39;s attractions and services, this top resort in Inari offers
+          the perfect setting for combining quality accommodation with pristine
+          nature and Arctic activities! Our hotel has wilderness rooms, log
+          cabins, aurora cabins and Inari Arctic Chalets.
+        </h4>
+        <img src="images/about.jpg" class="about-image" />
+      </div>
     </div>
   </body>
 </html>
