--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+
+  <!-- HEADER -->
+
+  <header>
     <div class="background-hero">
       <img src="images/hero.jpg" class="hero" />
       <div class="navbar">
@@ -22,12 +25,19 @@
       </div>
       <h1>Nordic Frost Resort</h1>
       <h2>Experience Arctic Comfort, Nordic Style</h2>
-      <div class="book-mobile">BOOK NOW</div>
+      <button class="book-mobile">BOOK NOW</button>
     </div>
+  </header>
+
+  <!-- BODY -->
+
+  <body>
+    <!-- ABOUT -->
+
     <div class="about-container">
       <div class="about-text">
         <h3>About us</h3>
-        <h4>
+        <h5>
           Nordic Frost resort is an exquisite blend of comfort and wilderness.
           The location right beside Lake Inari makes the hotel the perfect place
           to see the Northern Lights. The restaurant&#39;s large windows give a
@@ -36,9 +46,81 @@
           the perfect setting for combining quality accommodation with pristine
           nature and Arctic activities! Our hotel has wilderness rooms, log
           cabins, aurora cabins and Inari Arctic Chalets.
-        </h4>
-        <img src="images/about.jpg" class="about-image" />
+        </h5>
+      </div>
+      <img src="images/about.jpg" class="about-image" />
+    </div>
+
+    <!-- SLIDER -->
+
+    <div class="slider-container">
+      <h3>Northern lights at your doorstep, an arctic dream</h3>
+      <div class="slider-show">
+        <div class="slides">
+          <div class="slide"><img src="" /></div>
+          <div class="slide"><img src="" /></div>
+          <div class="slide"><img src="" /></div>
+        </div>
       </div>
     </div>
+
+    <!-- FACILITY -->
+
+    <div class="facility-background">
+      <img src="images/facility.jpg" class="facility-image" />
+      <h3>Facility amenities</h3>
+      <div class="sauna-container">
+        <img src="" class="sauna-svg" />
+        <h5>Sauna</h5>
+      </div>
+      <div class="restaurant-container">
+        <img src="" class="restaurant-svg" />
+        <h5>Restaurant</h5>
+      </div>
+      <div class="parking-container">
+        <img src="" class="parking-svg" />
+        <h5>Parking</h5>
+      </div>
+      <div class="wifi-container">
+        <img src="" class="wifi-svg" />
+        <h5>Free Wifi</h5>
+      </div>
+    </div>
+
+    <!-- ACTIVITIES -->
+
+    <div class="activities-container">
+      <h3>Activities</h3>
+      <div class="activities-images-container">
+        <img src="images/activity1.jpg" class="activity1" />
+        <img src="images/activity2.jpg" class="activity2" />
+        <img src="images/activity3.jpg" class="activity3" />
+      </div>
+      <button class="book-activities">BOOK ACTIVITIES</button>
+    </div>
+
+    <!-- RESTAURANT -->
+
+    <div class="tuurngait-container-mobile">
+      <h3>Restaurant Tuurngait</h3>
+      <img src="images/dinner.jpg" class="dinner-image" />
+      <h5>
+        Serving Breakfast, Lunch and Dinner with Nordic inspiration. Seasonal
+        use and a touch of frosty love.
+      </h5>
+      <button class="book-a-table">BOOK A TABLE</button>
+    </div>
+
+    <!-- FOOTER -->
+
+    <footer>
+      <img src="images/footer.jpg" class="footer-image" />
+      <h1>Nordic Frost Resort</h1>
+      <div class="footer-container">
+        <h5>text</h5>
+        <h5>text</h5>
+        <h5>text</h5>
+      </div>
+    </footer>
   </body>
 </html>
