--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
       <img src="images/facility.jpg" class="facility-image" />
       <h3>Facility amenities</h3>
       <div class="sauna-container">
-        <img src="" class="sauna-svg" />
+        <img src="svg-files/sauna.svg" class="sauna-svg" />
         <h5>Sauna</h5>
       </div>
       <div class="restaurant-container">
-        <img src="" class="restaurant-svg" />
+        <img src="svg-files/restaurant.svg" class="restaurant-svg" />
         <h5>Restaurant</h5>
       </div>
       <div class="parking-container">
-        <img src="" class="parking-svg" />
+        <img src="svg-files/parking.svg" class="parking-svg" />
         <h5>Parking</h5>
       </div>
       <div class="wifi-container">
-        <img src="" class="wifi-svg" />
+        <img src="svg-files/wifi.svg" class="wifi-svg" />
         <h5>Free Wifi</h5>
       </div>
     </div>
