--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nordic Frost Resort</title>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
-    <link href="index.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Darumadrop+One&family=Dosis:wght@200;300;400;500;600;700&family=Rubik+Vinyl&family=Tajawal:wght@200;300;400;500;700&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@1,300;1,400;1,700&family=Tajawal:wght@200;300;400;500;700&display=swap" rel="stylesheet">
   </head>
 
   <!-- HEADER -->
@@ -20,12 +19,13 @@
     <div class="background-hero">
       <img src="images/hero.jpg" class="hero" />
       <div class="navbar">
-        <div class="logo-mobile"><img src="svg-files/logo-mobile.svg" /></div>
-        <div class="hamburger"><img src="svg-files/hamburger.svg" /></div>
+        <div class="logo-mobile"><img src="svg-files/logo-mobile.svg" class="logo-mobile-svg" /></div>
+        <div class="hamburger"><img src="svg-files/hamburger.svg" class="hamburger-svg"/></div>
       </div>
       <h1>Nordic Frost Resort</h1>
       <h2>Experience Arctic Comfort, Nordic Style</h2>
       <button class="book-mobile">BOOK NOW</button>
+      <div class="devider"></div>
     </div>
   </header>
 
@@ -34,7 +34,7 @@
   <body>
     <!-- ABOUT -->
 
-    <div class="about-container">
+    <!-- <div class="about-container">
       <div class="about-text">
         <h3>About us</h3>
         <h5>
@@ -49,11 +49,11 @@
         </h5>
       </div>
       <img src="images/about.jpg" class="about-image" />
-    </div>
+    </div> -->
 
     <!-- SLIDER -->
 
-    <div class="slider-container">
+    <!-- <div class="slider-container">
       <h3>Northern lights at your doorstep, an arctic dream</h3>
       <div class="slider-show">
         <div class="slides">
@@ -62,11 +62,11 @@
           <div class="slide"><img src="" /></div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- FACILITY -->
 
-    <div class="facility-background">
+    <!-- <div class="facility-background">
       <img src="images/facility.jpg" class="facility-image" />
       <h3>Facility amenities</h3>
       <div class="sauna-container">
@@ -85,11 +85,11 @@
         <img src="svg-files/wifi.svg" class="wifi-svg" />
         <h5>Free Wifi</h5>
       </div>
-    </div>
+    </div> -->
 
     <!-- ACTIVITIES -->
 
-    <div class="activities-container">
+    <!-- <div class="activities-container">
       <h3>Activities</h3>
       <div class="activities-images-container">
         <img src="images/activity1.jpg" class="activity1" />
@@ -97,11 +97,11 @@
         <img src="images/activity3.jpg" class="activity3" />
       </div>
       <button class="book-activities">BOOK ACTIVITIES</button>
-    </div>
+    </div> -->
 
     <!-- RESTAURANT -->
 
-    <div class="tuurngait-container-mobile">
+    <!-- <div class="tuurngait-container-mobile">
       <h3>Restaurant Tuurngait</h3>
       <img src="images/dinner.jpg" class="dinner-image" />
       <h5>
@@ -109,11 +109,11 @@
         use and a touch of frosty love.
       </h5>
       <button class="book-a-table">BOOK A TABLE</button>
-    </div>
+    </div> -->
 
     <!-- FOOTER -->
 
-    <footer>
+    <!-- <footer>
       <img src="images/footer.jpg" class="footer-image" />
       <h1>Nordic Frost Resort</h1>
       <div class="footer-container">
@@ -122,5 +122,5 @@
         <h5>text</h5>
       </div>
     </footer>
-  </body>
+  </body> -->
 </html>
