--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <!-- ABOUT -->
 
-    <!-- <div class="about-container">
+    <div class="about-container">
       <div class="about-text">
         <h3>About us</h3>
         <h5>
@@ -49,11 +49,11 @@
         </h5>
       </div>
       <img src="images/about.jpg" class="about-image" />
-    </div> -->
+    </div>
 
     <!-- SLIDER -->
 
-    <!-- <div class="slider-container">
+    <div class="slider-container">
       <h3>Northern lights at your doorstep, an arctic dream</h3>
       <div class="slider-show">
         <div class="slides">
@@ -62,13 +62,13 @@
           <div class="slide"><img src="" /></div>
         </div>
       </div>
-    </div> -->
+    </div>
 
     <!-- FACILITY -->
 
-    <!-- <div class="facility-background">
-      <img src="images/facility.jpg" class="facility-image" />
-      <h3>Facility amenities</h3>
+    <div class="facility-background">
+      <h3 class="h3-facility">Facility amenities</h3>
+      <div class="block-container">
       <div class="sauna-container">
         <img src="svg-files/sauna.svg" class="sauna-svg" />
         <h5>Sauna</h5>
@@ -85,7 +85,8 @@
         <img src="svg-files/wifi.svg" class="wifi-svg" />
         <h5>Free Wifi</h5>
       </div>
-    </div> -->
+    </div>
+    </div>
 
     <!-- ACTIVITIES -->
 
