--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <link href="style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@1,300;1,400;1,700&family=Tajawal:wght@200;300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@1,300;1,400;1,700&family=Tajawal:wght@200;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <!-- HEADER -->
@@ -19,12 +22,18 @@
     <div class="background-hero">
       <img src="images/hero.jpg" class="hero" />
       <div class="navbar">
-        <div class="logo-mobile"><img src="svg-files/logo-mobile.svg" class="logo-mobile-svg" /></div>
-        <div class="hamburger"><img src="svg-files/hamburger.svg" class="hamburger-svg"/></div>
+        <div class="logo-mobile">
+          <img src="svg-files/logo-mobile.svg" class="logo-mobile-svg" />
+        </div>
+        <div class="hamburger">
+          <img src="svg-files/hamburger.svg" class="hamburger-svg" />
+        </div>
       </div>
       <h1>Nordic Frost Resort</h1>
       <h2>Experience Arctic Comfort, Nordic Style</h2>
-      <button class="book-mobile">BOOK NOW</button>
+      <a class="book-mobile" href="booking.html" class="book-mobile"
+        >BOOK NOW</a
+      >
       <div class="devider"></div>
     </div>
   </header>
@@ -69,28 +78,28 @@
     <div class="facility-background">
       <h3 class="h3-facility">Facility amenities</h3>
       <div class="block-container">
-      <div class="sauna-container">
-        <img src="svg-files/sauna.svg" class="sauna-svg" />
-        <h5>Sauna</h5>
+        <div class="sauna-container">
+          <img src="svg-files/sauna.svg" class="sauna-svg" />
+          <h5>Sauna</h5>
+        </div>
+        <div class="restaurant-container">
+          <img src="svg-files/restaurant.svg" class="restaurant-svg" />
+          <h5>Restaurant</h5>
+        </div>
+        <div class="parking-container">
+          <img src="svg-files/parking.svg" class="parking-svg" />
+          <h5>Parking</h5>
+        </div>
+        <div class="wifi-container">
+          <img src="svg-files/wifi.svg" class="wifi-svg" />
+          <h5>Free Wifi</h5>
+        </div>
       </div>
-      <div class="restaurant-container">
-        <img src="svg-files/restaurant.svg" class="restaurant-svg" />
-        <h5>Restaurant</h5>
-      </div>
-      <div class="parking-container">
-        <img src="svg-files/parking.svg" class="parking-svg" />
-        <h5>Parking</h5>
-      </div>
-      <div class="wifi-container">
-        <img src="svg-files/wifi.svg" class="wifi-svg" />
-        <h5>Free Wifi</h5>
-      </div>
-    </div>
     </div>
 
     <!-- ACTIVITIES -->
 
-    <!-- <div class="activities-container">
+    <div class="activities-container">
       <h3>Activities</h3>
       <div class="activities-images-container">
         <img src="images/activity1.jpg" class="activity1" />
@@ -98,7 +107,7 @@
         <img src="images/activity3.jpg" class="activity3" />
       </div>
       <button class="book-activities">BOOK ACTIVITIES</button>
-    </div> -->
+    </div>
 
     <!-- RESTAURANT -->
 
@@ -111,17 +120,5 @@
       </h5>
       <button class="book-a-table">BOOK A TABLE</button>
     </div> -->
-
-    <!-- FOOTER -->
-
-    <!-- <footer>
-      <img src="images/footer.jpg" class="footer-image" />
-      <h1>Nordic Frost Resort</h1>
-      <div class="footer-container">
-        <h5>text</h5>
-        <h5>text</h5>
-        <h5>text</h5>
-      </div>
-    </footer>
-  </body> -->
+  </body>
 </html>
