--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <div class="logo-mobile">
           <img src="svg-files/logo-mobile.svg" class="logo-mobile-svg" />
         </div>
+        <div class="logo-desktop">
+          <img src="svg-files/logo-desktop.svg" class="logo-desktop-svg" />
+        </div>
         <div class="hamburger">
           <img src="svg-files/hamburger.svg" class="hamburger-svg" />
         </div>
@@ -66,9 +69,15 @@
       <h3>Northern lights at your doorstep, an arctic dream</h3>
       <div class="slider-show">
         <div class="slides">
-          <div class="slide"><img src="" /></div>
-          <div class="slide"><img src="" /></div>
-          <div class="slide"><img src="" /></div>
+          <a href="booking.html" class="slide"
+            ><img src="images/luxury.jpg" alt="Luxury Room Image"
+          /></a>
+          <a href="booking.html" class="slide"
+            ><img src="images/standard.jpg" alt="Standard Room Image"
+          /></a>
+          <a href="booking.html" class="slide"
+            ><img src="images/suite.jpg" alt="Suite Room Image"
+          /></a>
         </div>
       </div>
     </div>
@@ -100,13 +109,28 @@
     <!-- ACTIVITIES -->
 
     <div class="activities-container">
-      <h3>Activities</h3>
+      <div class="activity-text">
+        <h3>Activities</h3>
+        <h5>
+          Nova Skyland offers peaceful and natural surroundings as well as all
+          the amenities. Only a 200-metre walk takes you to the Santa Claus
+          Village. We are dedicated to creating a holiday with detail-oriented
+          for host and guests alike. At Nova Skyland you are in the centre of
+          the Arctic Circle, next door to the real Santa, and in a town in the
+          middle of wilderness. Nova safari activities are exclusively available
+          for guests staying at Nova Skyland and Nova Galaxy. This exclusivity
+          ensures a seamless experience, allowing our guests to enjoy the
+          activities in a serene and uncrowded setting.
+        </h5>
+        <button class="book-activities">BOOK ACTIVITIES</button>
+      </div>
       <div class="activities-images-container">
         <img src="images/activity1.jpg" class="activity1" />
         <img src="images/activity2.jpg" class="activity2" />
         <img src="images/activity3.jpg" class="activity3" />
       </div>
-      <button class="book-activities">BOOK ACTIVITIES</button>
+
+      <img src="images/activity-desktop.jpg" class="activity-image-desktop" />
     </div>
 
     <!-- RESTAURANT -->
