--- a/booking.html
+++ b/booking.html
@@ -1,35 +1,65 @@
-<!-- index.php -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hotel Booking Form</title>
+    <title>Booking</title>
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <link href="booking.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bellota+Text:ital,wght@1,300;1,400;1,700&family=Tajawal:wght@200;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
-    <h2>Hotel Booking Form</h2>
+    <header>
+      <div class="background-hero">
+        <img src="images/footer.jpg" class="hero" />
+        <div class="navbar">
+          <div class="logo-mobile">
+            <img src="svg-files/logo-mobile.svg" class="logo-mobile-svg" />
+          </div>
+          <div class="logo-desktop">
+            <img src="svg-files/logo-desktop.svg" class="logo-desktop-svg" />
+          </div>
+          <div class="hamburger">
+            <img src="svg-files/hamburger.svg" class="hamburger-svg" />
+          </div>
+        </div>
+        <div class="devider"></div>
+      </div>
+    </header>
 
-    <form action="process.php" method="post">
-      <label for="room">Room Type:</label>
-      <select name="room" id="room">
-        <option value="standard">Standard</option>
-        <option value="deluxe">Deluxe</option>
-        <option value="suite">Suite</option></select
-      ><br />
+    <p>Hotel Booking Form</p>
 
-      <label for="arrival">Arrival Date:</label>
-      <input type="date" name="arrival" required /><br />
+    <div class="form-container">
+      <form action="process.php" method="post">
+        <label for="room">Room Type:</label>
+        <select name="room" id="room">
+          <option value="standard">Finnish</option>
+          <option value="deluxe">Polaris</option>
+          <option value="suite">Nordic</option></select
+        ><br />
 
-      <label for="departure">Departure Date:</label>
-      <input type="date" name="departure" required /><br />
+        <label for="arrival">Arrival Date:</label>
+        <input type="date" name="arrival" required /><br />
 
-      <label for="guest">Guest Name:</label>
-      <input type="text" name="guest" required /><br />
+        <label for="departure">Departure Date:</label>
+        <input type="date" name="departure" required /><br />
 
-      <label for="transferCode">Transfer Code:</label>
-      <input type="text" name="transferCode" required /><br />
+        <label for="guest">Guest Name:</label>
+        <input type="text" name="guest" required /><br />
 
-      <input type="submit" value="Book Now" />
-    </form>
+        <label for="transferCode">Transfer Code:</label>
+        <input type="text" name="transferCode" required /><br />
+
+        <input type="submit" value="Book Now" class="book-button" />
+      </form>
+    </div>
   </body>
 </html>
